--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/style/main.css">
   <title>New Project</title>
 </head>
 
@@ -38,4 +38,5 @@
     </nav>
   </header>
 </body>
+
 </html>
