--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/style/main.css">
+  <link rel="stylesheet" href="./style/main.css">
   <title>New Project</title>
 </head>
 
@@ -37,6 +37,10 @@
       </ul>
     </nav>
   </header>
+  <container class="main-container">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit consequatur iste quis odit dicta fugit,
+      architecto porro atque dignissimos voluptatem!</p>
+  </container>
 </body>
 
 </html>
