--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
   <header class="header">
     <div class="header__top">
-      <img class="header__logo" src="https://i.ibb.co/S7g0jjS/logo.png" alt="logo" class="header__img" />
+      <img class="header__logo" src="https://i.ibb.co/S7g0jjS/logo.png" alt="logo" />
       <div class="header__search">
-        <input type="text" placeholder="search hear" class="header__input" />
-        <img class="header__search-img" src="https://i.ibb.co/sVDNgvy/search.png" alt="search">
+        <input class="header__search-input" type="text" placeholder="search hear"  />
+        <img class="header__search-img" src="https://i.ibb.co/sVDNgvy/search.png" alt="search" />
       </div>
       <div class="header__cart">
-        <img src="https://i.ibb.co/nfbqDvY/cart.png" alt="cart" class="header__cart-img">
-        <span>$300</span>
+        <img class="header__cart-img" src="https://i.ibb.co/nfbqDvY/cart.png" alt="cart" />
+        <span class="header__cart-text">$300</span>
       </div>
     </div>
     <nav class="header__nav">
@@ -26,9 +26,8 @@
         <li class="header__item"><a href="#" class="header__link">Home</a></li>
         <li class="header__item"><a href="#" class="header__link">Sale</a></li>
         <li class="header__item"><a href="#" class="header__link">Handbags</a></li>
-        <li class="header__item"><a href="#" class="header__link">Accessories</a></li>
         <li class="header__item"><a href="#" class="header__link">Wallets</a></li>
-        <li class="header__item"><a href="#" class="header__link">Sale</a></li>
+        <li class="header__item"><a href="#" class="header__link">Accessories</a></li>
         <li class="header__item"><a href="#" class="header__link">Mens store</a></li>
         <li class="header__item"><a href="#" class="header__link">Shoes</a></li>
         <li class="header__item"><a href="#" class="header__link">Vintage</a></li>
